# google-cloud-document-ai-warehouse-demo

./: .gitignore  LICENSE  README.md
cloud-functions/us-patent-process/: Makefile  config.py  error_handler.py  main.py  pyproject.toml  requirements.txt  us_patent.py  us_patent_document_ai_warehouse_uploader.py  us_patent_extractor.py
cloud-functions/us-patent-process/errors/: __init__.py  method_not_allowed_error.py
cloud-functions/us-patent-process/us_patent_process/: main.py  us_patent.py  us_patent_extractor.py
data/documents/us/patents/: README.md  schema.json
data/documents/us/patents/labeled/: computer_vision_1.json  computer_vision_10.json  computer_vision_11.json  computer_vision_12.json  computer_vision_13.json  computer_vision_14.json  computer_vision_15.json  computer_vision_16.json  computer_vision_17.json  computer_vision_18.json  computer_vision_19.json  computer_vision_2.json  computer_vision_20.json  computer_vision_3.json  (+121 more)
infra/deployment/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform_tfvars_secret.tf  tfstate_bucket.tf  variables.tf
infra/deployment/modules/cloud_function_us_patent_process/: gcs.tf  main.tf  outputs.tf  variables.tf
infra/deployment/modules/doc_ai/: main.tf  outputs.tf  variables.tf
infra/deployment/modules/enable_apis/: main.tf
infra/deployment/modules/iam/: cloud_function_us_patent_process_sa.tf  cloud_functions_sa.tf  doc_ai_sa.tf  doc_ai_warehouse_ui_sa.tf  gcs_sa.tf  outputs.tf  secret_manager_sa.tf  variables.tf  versions.tf
infra/deployment/modules/kms/: main.tf  outputs.tf  variables.tf
